@@ -11,7 +11,8 @@ npm install express
 npm install gex
 npm install cookies
 npm install config
-
+npm install oauth
+npm install linkedin-js
 
 
 
